# eth-microstructure

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
src/eth_microstructure/: __init__.py  cli.py  config.py  data_access.py  inspection.py  main.py  replay.py  validation.py
src/eth_microstructure/collector/: __init__.py  base.py  orderbook_collector.py  trade_collector.py
src/eth_microstructure/models/: __init__.py  orderbook.py  trade.py
src/eth_microstructure/storage/: __init__.py  manifest.py  parquet_writer.py
src/eth_microstructure/web/: __init__.py  app.py
src/eth_microstructure/web/static/: app.css  app.js  index.html
tests/: conftest.py  test_collector_routes.py  test_inspection_cli.py  test_manifest.py  test_models.py  test_parquet_writer.py  test_replay.py  test_validation.py  test_web.py
