[project]
name = "eth-microstructure"
version = "0.1.0"
description = "Reliable Binance ETHUSDT microstructure data collectors"
readme = "README.md"
authors = [
    { name = "jacky", email = "jacky@taoqi001.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "httpx>=0.28",
    "loguru>=0.7",
    "orjson>=3",
    "pyarrow>=18",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "uvicorn>=0.35",
    "websockets>=15",
]


[project.scripts]
eth-microstructure = "eth_microstructure.main:run"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["eth_microstructure"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "types-pyyaml>=6",
]
